Fix mobile spacing issue

--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -10,8 +10,24 @@
   justify-content: flex-end;
 }
 
+.logo {
+  width: 100%;
+  max-width: 245px;
+  max-height: 80px;
+  height: auto;
+}
+
 @media only screen and (max-width: 768px) {
   .navbar {
     padding: 0 5%;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .logo {
+    width: 100%;
+    max-width: 200px;
+    max-height: 70px;
+    height: auto;
   }
 }
